# Learning-OpenGL

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
include/: Application.h  Entity.h  Helpers.h  PhysicsUpdater.h  Shader.h  VAO.h  VBO.h  uiHandler.h
include/Rendering/: Camera.h  Mesh.h  Renderer.h  cubeData.h
include/Rendering/Lighting/: Light.h  Material.h
include/Rendering/Wrappers/: EBO.h  Shader.h  VBO.h
include/SimInfo/: fpsTracker.h
include/Utils/: Helpers.h  fpsTracker.h  performanceLogger.h
shaders/: default.frag  default.vert
src/: Application.cpp  Application_setupScene.cpp  Application_update.cpp  Camera.cpp  Entity.cpp  Helpers.cpp  PhysicsUpdater.cpp  main.cpp  uiHandler.cpp
src/Rendering/: Camera.cpp  Mesh.cpp  Renderer.cpp
src/Rendering/Wrappers/: EBO.cpp  Shader.cpp  VAO.cpp  VBO.cpp
src/SimInfo/: fpsTracker.cpp
src/Utils/: Helpers.cpp  fpsTracker.cpp  performanceLogger.cpp
src/Wrappers/: Shader.cpp
